--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-starter-minimal",
   "version": "1.0.0",
   "private": true,
-  "description": "A Gatsby starter with no plugins and a single welcome page.",
+  "description": "A Gatsby starter for running recipes and adding themes. It does not come with any pages.",
   "author": "Laurie Barth",
   "keywords": [
     "gatsby"
@@ -11,13 +11,15 @@
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "license": "0BSD",
   "dependencies": {
-    "gatsby": "^3.9.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.24.63",
+    "gatsby-source-shopify": "^3.4.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "shopify-buy": "^2.11.0"
   }
 }
