--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.5",
     "bootstrap": "^5.0.2",
+    "cross-fetch": "^3.1.4",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.63",
     "gatsby-source-shopify": "^3.4.0",
